@@ -35,7 +35,7 @@
 /**
  * @brief Adaptor for internal accelerometer.
  *
- * Adaptor for internal accelerometer. Uses SysFs driver interface in interval 
+ * Adaptor for internal accelerometer. Uses SysFs driver interface in interval
  * polling mode, i.e. values are read with given constant interval.
  *
  * Driver interface is located in @e /sys/class/i2c-adapter/i2c-3/3-001d/ .
@@ -70,8 +70,8 @@ protected:
     virtual unsigned int evaluateIntervalRequests(int& sessionId) const;
 
 private:
-    DeviceAdaptorRingBuffer<OrientationData>* accelerometerBuffer_;
-    OrientationData orientationValue_;
+    DeviceAdaptorRingBuffer<AccelerationData>* accelerometerBuffer_;
+    AccelerationData orientationValue_;
 
     void interpretEvent(int src, struct input_event *ev);
     void commitOutput(struct input_event *ev);
