@@ -109,5 +109,11 @@ bool AccelerometerSensorChannel::stop()
 void AccelerometerSensorChannel::emitData(const AccelerationData& value)
 {
     previousSample_ = value;
-    writeToClients((const void*)(&value), sizeof(AccelerationData));
+    downsampleAndPropagate(value, downsampleBuffer_);
+}
+
+void AccelerometerSensorChannel::removeSession(int sessionId)
+{
+    downsampleBuffer_.take(sessionId);
+    NodeBase::removeSession(sessionId);
 }
